v 1.3
	#82 - Adding a thumbnail after uploading an image.
	Adding Czech Language.
	Adding export functionality to both flexigrid and datatables theme.
	Adding print functionality to datatables theme.
	Adding CKEditor as the default texteditor for grocery CRUD. You can also easily change to tinymce from the grocery_crud config file.
	Adding Markitup texteditor. Really useful editor for developers.
	#68 - set_relation doesn't work as expected when the third field (title name) is the same on two or more set_relation methods.
v 1.2.3
	Compatible with Codeigniter version 2.1.1
	Adding Hungarian language.
	Adding new method: field_type. For now it is just an alias to the change_field_type method.
	#49 - Adding new method: set_primary_key.
	#27 - Adding value to enum and set of the change_field_type method.
	#44 - Changing the date format at the list table. For example the 10 Jan 2003 has to be 10/01/2003.
	#56 - Field type true_false now uses default value.
	#42 - Insert ids to all the inputs for easy Javascript changes.
	Bug fixes:
		#30 - Change field type doesn't work if the field is not at the table.
		#38 - required_field doesn't work for relation_n_n fields.
v 1.2.2
	Adding Dutch language. 
	Adding a new method "unset_back_to_list".  Unsets everything that has to do with buttons or links with go back to list message.
	#23 - When we use $crud->where() method it doesn't work as expected with the search of flexigrid.
	#28 - Change the hardcoded JavaScripts and CSS with variables.
	#25 - Adding a new method "unset_list".  Unsets the first list and the ajax_list and gives an exception error for the user that tries to access it.
	Adding a new button/feature "save and go back to list". When a user press the button "save and go back to list" it is automatically redirect you to the list page when a successful save is done. 