@@ -3,9 +3,13 @@ v 1.3
 	Adding Czech Language.
 	Adding export functionality to both flexigrid and datatables theme.
 	Adding print functionality to datatables theme.
-	Adding CKEditor as the default texteditor for grocery CRUD. You can also easily change to tinymce from the grocery_crud config file.
+	Adding CKEditor as the default texteditor for grocery CRUD.
 	Adding Markitup texteditor. Really useful editor for developers.
 	#68 - set_relation doesn't work as expected when the third field (title name) is the same on two or more set_relation methods.
+	More configuration values:
+		- Choose text-editor between 'ckeditor','tinymce' or 'markitup'
+		- Choose text-editor type between 'minimal' or 'full'
+		- Character limiter at the columns of the list page
 v 1.2.3
 	Compatible with Codeigniter version 2.1.1
 	Adding Hungarian language.
